# demax_heating_system

./: package-lock.json  package.json
demax_backend/: .flaskenv  Dockerfile  README.rst  docker-compose.yaml  pyproject.toml
demax_backend/demax_backend/: api.py  configs.py  main.py
demax_backend/demax_backend/resources/: application.conf
demax_backend/demax_backend/services/: database_service.py  heating_service.py
demax_backend/demax_backend/services/actors/: relais.py
demax_backend/demax_backend/services/sensors/: simulation_service.py  temperature_service.py
demax_backend/resources/configs/: datasrc.yml
demax_backend/src/: api.py  main.py
demax_backend/src/services/: database_service.py  heating_service.py
demax_backend/src/services/actors/: relais.py
demax_backend/src/services/sensors/: simulation_service.py
demax_backend/tests/sensors/: test_temperature_sensor.py
demax_backend/tests/services/: test_heating_service.py
public/: index.html
src/: App.js  index.js
